--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/lucidmotors/84bbea87-6026-4b1a-b10d-7e91621f2b52'>Lucid Motors - Technical Program Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qNc9VfwN&k=Job&j=o5Qrbfwh&__jvst=Employee+Referral&__jvsd=sQfHFgwc&__jvsc=Twitter&bid=nzWipMwt'>Workiva Inc. Careers - Onboarding Project Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='https://kimmel-associates.breezy.hr/p/46d91d393b0d-project-manager'>Project Manager</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -48,7 +56,7 @@
 <p><span class="badge badge-light">Detroit Detroit</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://kimmel-associates.breezy.hr/p/ff117bcc2ec3-project-manager'>Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kimmel-associates.breezy.hr/p/ff117bcc2ec3-project-manager'>Project Manager</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA  California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -64,15 +72,15 @@
 <p><span class="badge badge-light">San Diego, California United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://burnsmcdonn.referrals.selectminds.com/jobs/ports-maritime-project-manager-6798'>Ports & Maritime Project Manager - Burns & McDonnell Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://burnsmcdonn.referrals.selectminds.com/jobs/ports-maritime-project-manager-6798'>Ports & Maritime Project Manager - Burns & McDonnell Careers</a></h5> 
 <p><span class="badge badge-light">United States  California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://burnsmcdonn.referrals.selectminds.com/jobs/aviation-technology-systems-project-manager-6801'>Aviation Technology Systems Project Manager - Burns & McDonnell Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://burnsmcdonn.referrals.selectminds.com/jobs/aviation-technology-systems-project-manager-6801'>Aviation Technology Systems Project Manager - Burns & McDonnell Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://mainebhr.recruiterbox.com/jobs/fk03ia1'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://mainebhr.recruiterbox.com/jobs/fk03ia1'>
     Education Specialist III: MLTI Project Manager  at State of Maine
 </a></h5> 
 <p><span class="badge badge-light">United States</span></p>
@@ -150,7 +158,7 @@
 <p><span class="badge badge-light">Los Angeles Los Angeles Los Angeles</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/enett/9e035b1f-0f5b-4b40-bfb5-9ed40815ef45'>eNett International - Business Project Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/enett/9e035b1f-0f5b-4b40-bfb5-9ed40815ef45'>eNett International - Business Project Manager</a></h5> 
 <p><span class="badge badge-light">Melbourne Australia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -258,7 +266,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qYS9VfwE&k=Job&j=olBrbfwi&__jvst=Employee+Referral&__jvsd=sp15xgwN&__jvsc=Twitter&bid=nVVXoMws'>Curriculum Associates Careers - Project Manager / Scrum Master</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qYS9VfwE&k=Job&j=olBrbfwi&__jvst=Employee+Referral&__jvsd=sp15xgwN&__jvsc=Twitter&bid=nVVXoMws'>Curriculum Associates Careers - Project Manager / Scrum Master</a></h5> 
 <p><span class="badge badge-light">North Billerica, Massachusetts</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -278,7 +286,7 @@
 <p><span class="badge badge-light">San Francisco, CA  San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/xqwhk9upyd15sinnsr16wwgmpr'>Technical Project Manager III :?9493433 | Current Openings</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/xqwhk9upyd15sinnsr16wwgmpr'>Technical Project Manager III :?9493433 | Current Openings</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA  Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -314,7 +322,7 @@
 <p><span class="badge badge-light">United States Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ZARecruiting/743999698476152-lead-senior-regulatory-affairs-project-manager-medical-device-full-relo'>Z&A Recruiting LEAD SENIOR REGULATORY AFFAIRS PROJECT MANAGER - MEDICAL DEVICE  - FULL RELO | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ZARecruiting/743999698476152-lead-senior-regulatory-affairs-project-manager-medical-device-full-relo'>Z&A Recruiting LEAD SENIOR REGULATORY AFFAIRS PROJECT MANAGER - MEDICAL DEVICE  - FULL RELO | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -322,7 +330,7 @@
 <p><span class="badge badge-light">Milan</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/akqa/jobs/1929179'>Job Application for Project Manager Intern at AKQA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/akqa/jobs/1929179'>Job Application for Project Manager Intern at AKQA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -330,11 +338,11 @@
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/akqa/jobs/1935452'>Job Application for Senior Project Manager at AKQA</a></h5> 
+<h5><a href='https://boards.greenhouse.io/akqa/jobs/1935452'>Job Application for Senior Project Manager at AKQA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uth.referrals.selectminds.com/jobs/senior-program-manager-academic-and-student-success-6221'>Senior Program Manager, Academic and Student Success - UTHealth Careers</a></h5> 
+<h5><a href='https://uth.referrals.selectminds.com/jobs/senior-program-manager-academic-and-student-success-6221'>Senior Program Manager, Academic and Student Success - UTHealth Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -346,7 +354,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/interiorworx/job/oyElbfws'>InteriorWorx Careers - Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/interiorworx/job/oyElbfws'>InteriorWorx Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light">Boise, Idaho</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -372,7 +380,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/intercaretherapy/jobs/1938884'>Job Application for Behavior/Behavioral Program Manager - Applied Behavior Analysis (MA required) at Intercare Therapy</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/intercaretherapy/jobs/1938884'>Job Application for Behavior/Behavioral Program Manager - Applied Behavior Analysis (MA required) at Intercare Therapy</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -424,7 +432,7 @@
 <p><span class="badge badge-light">Chicago, Illinois  Minneapolis, Minnesota  Chicago Minneapolis</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qAv9VfwT&k=Job&j=o7Wsbfwq&__jvst=Employee+Referral&__jvsd=sddHGhwz&__jvsc=Twitter&bid=nDlooMw1'>Hobsons Careers - Agile Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qAv9VfwT&k=Job&j=o7Wsbfwq&__jvst=Employee+Referral&__jvsd=sddHGhwz&__jvsc=Twitter&bid=nDlooMw1'>Hobsons Careers - Agile Program Manager</a></h5> 
 <p><span class="badge badge-light">Arlington, VA Arlington</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -435,14 +443,6 @@
 <h5><a href='https://ircareers.referrals.selectminds.com/jobs/contracting-project-manager-turnkey-38353'>Contracting Project Manager Turnkey - Ingersoll Rand Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qAv9VfwT&k=Job&j=o7Wsbfwq&__jvst=Employee+Referral&__jvsd=sn5cpgwO&__jvsc=Twitter&bid=nOHmoMww'>Hobsons Careers - Agile Program Manager</a></h5> 
-<p><span class="badge badge-light">Arlington, VA Arlington</span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://fnih.org/about/careers/scientific-pm-neuroscience'>Scientific Project Manager - Neuroscience | FNIH</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-30</p>
 <hr/>
 
 
